cargo-features = ["per-package-target"]

[package]
name = "mutta_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11"
uart_16550 = "0.2.18"
x86_64 = "0.14.10"
spin = "0.9.4"
acpi = "4.1.1"
heapless = "0.5.0"

#fat32 = "0.2.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.noto-sans-mono-bitmap]
version = "0.1.2"
default-features = false
features = ["regular", "size_14"]

[workspace]
members = ["boot"]
resolver = "2"
